@@ -89,6 +89,7 @@ export(smpsize_lmm)
 export(split_half)
 export(std_beta)
 export(svy)
+export(svy_md)
 export(svyglm.nb)
 export(table_values)
 export(typical_value)
